overlays/gateway-api/shared-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "5"
